# learning-opengl

./: CMakeLists.txt  README.md
include/: shader_s.h
src/: main.cpp  shader_s.cpp
